+comments, moving email related stuff to properties and small changes to calendar logic.