@@ -56,7 +56,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://norrto.se"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setExposedHeaders(List.of("Content-type", "Authorization", "RefreshToken"));
         configuration.setAllowedMethods(List.of("*"));
@@ -65,7 +65,6 @@ public class SecurityConfig {
         source.registerCorsConfiguration("/api/v1/**", configuration);
         return source;
     }
-
 
     @Bean
     public AuthenticationProvider authenticationProvider() {
